--- a/package.json
+++ b/package.json
@@ -31,9 +31,8 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3"
+    "react-router-dom": "^4.2.2",
+    "webpack": "^4.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -51,6 +50,8 @@
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
-    "style-loader": "^0.21.0"
+    "style-loader": "^0.21.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3"
   }
 }
