--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     ]
   },
   "dependencies": {
+    "history": "^4.7.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
