--- a/Legion.FrontEnd/.eslintrc
+++ b/Legion.FrontEnd/.eslintrc
@@ -1,6 +1,21 @@
 {
   "extends": "airbnb",
   "rules": {
-    "func-names": ["error", "never"]
+    "func-names": ["error", "never"],
+    "linebreak-style": ["off", "unix", "windows"],
+    "import/prefer-default-export": "off",
+    "react/prefer-stateless-function": "off",
+    "jsx-a11y/anchor-is-valid": ["error", {
+      "components": [ "Link" ],
+      "specialLink": [ "to", "hrefLeft", "hrefRight" ],
+      "aspects": [ "noHref", "invalidHref", "preferButton" ]
+    }]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["src"]
+      }
+    }
   }
 }
