--- a/Legion.FrontEnd/package.json
+++ b/Legion.FrontEnd/package.json
@@ -1,11 +1,14 @@
 {
 	"name": "73rdlegionwebsite",
 	"version": "0.0.0",
-	"description":
-		"Webapp for the 73rd Legion gaming community.  Intended to supplement the interactions within our Discord guild and provide services which Discord does not.  Actual features will be defined and built as we come up with more ideas.",
+	"description": "Webapp for the 73rd Legion gaming community.  Intended to supplement the interactions within our Discord guild and provide services which Discord does not.  Actual features will be defined and built as we come up with more ideas.",
 	"author": "",
 	"license": "ISC",
-	"keywords": ["react", "webapp", "gaming"],
+	"keywords": [
+		"react",
+		"webapp",
+		"gaming"
+	],
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
@@ -21,8 +24,14 @@
 	},
 	"homepage": "https://github.com/blakestone95/73rdLegionWebsite#readme",
 	"babel": {
-		"presets": ["es2015", "react", "stage-0"],
-		"plugins": ["transform-object-rest-spread"]
+		"presets": [
+			"es2015",
+			"react",
+			"stage-0"
+		],
+		"plugins": [
+			"transform-object-rest-spread"
+		]
 	},
 	"dependencies": {
 		"history": "^4.7.2",
@@ -31,27 +40,29 @@
 		"react-router-dom": "^4.2.2"
 	},
 	"devDependencies": {
-		"webpack": "^4.6.0",
-		"webpack-merge": "^4.1.2",
 		"babel-cli": "^6.26.0",
-		"clean-webpack-plugin": "^0.1.19",
 		"babel-core": "^6.26.0",
-		"html-webpack-plugin": "^3.2.0",
 		"babel-loader": "^7.1.4",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-preset-es2015": "^6.24.1",
-		"uglifyjs-webpack-plugin": "^1.2.5",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-0": "^6.24.1",
 		"babel-register": "^6.26.0",
+		"clean-webpack-plugin": "^0.1.19",
 		"css-loader": "^0.28.11",
 		"eslint": "^4.19.1",
 		"eslint-config-airbnb": "^16.1.0",
+		"eslint-plugin-import": "^2.12.0",
+		"eslint-plugin-react": "^7.9.1",
 		"file-loader": "^1.1.11",
+		"html-webpack-plugin": "^3.2.0",
 		"less": "^3.0.2",
 		"less-loader": "^4.1.0",
 		"style-loader": "^0.21.0",
+		"uglifyjs-webpack-plugin": "^1.2.5",
+		"webpack": "^4.6.0",
 		"webpack-cli": "^2.0.15",
-		"webpack-dev-server": "^3.1.3"
+		"webpack-dev-server": "^3.1.3",
+		"webpack-merge": "^4.1.2"
 	}
 }
