--- a/Legion.FrontEnd/.eslintrc
+++ b/Legion.FrontEnd/.eslintrc
@@ -6,7 +6,7 @@
     "import/prefer-default-export": "off",
     "react/prefer-stateless-function": "off",
     "jsx-a11y/anchor-is-valid": ["error", {
-      "components": [ "Link" ],
+      "components": [ "Link", "Redirect" ],
       "specialLink": [ "to", "hrefLeft", "hrefRight" ],
       "aspects": [ "noHref", "invalidHref", "preferButton" ]
     }]
