--- a/Legion.FrontEnd/package.json
+++ b/Legion.FrontEnd/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "history": "^4.7.2",
+    "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1"
