--- a/Legion.FrontEnd/package.json
+++ b/Legion.FrontEnd/package.json
@@ -70,6 +70,7 @@
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.7.1",
     "less-loader": "^4.1.0",
+    "path-to-regexp": "^2.4.0",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.16.1",
