--- a/Ash.FrontEnd/package.json
+++ b/Ash.FrontEnd/package.json
@@ -60,7 +60,10 @@
     ]
   },
   "dependencies": {
+    "@mdi/font": "^2.5.94",
     "history": "^4.7.2",
+    "mdi-react": "^4.0.0",
+    "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1"
