--- a/Ash.FrontEnd/.gitignore
+++ b/Ash.FrontEnd/.gitignore
@@ -32,7 +32,8 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+build/
+# build/Release
 
 # Dependency directories
 node_modules/
