--- a/Ash.FrontEnd/package.json
+++ b/Ash.FrontEnd/package.json
@@ -9,10 +9,11 @@
     "webapp",
     "gaming"
   ],
-  "main": "index.js",
+  "main": "index.jsx",
   "scripts": {
-    "build": "webpack --config webpack.prod.js",
-    "watch": "webpack-dev-server --color --progress --config webpack.dev.js",
+    "watch": "webpack-dev-server --color --progress",
+    "build": "webpack -p",
+    "build-dev": "webpack --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,26 +24,6 @@
     "url": "https://github.com/blakestone95/AshkeepersRestWebsite/issues"
   },
   "homepage": "https://github.com/blakestone95/AshkeepersRestWebsite#readme",
-  "babel": {
-    "presets": [
-      [
-        "env",
-        {
-          "targets": {
-            "browsers": [
-              "last 2 versions",
-              "not dead"
-            ]
-          }
-        }
-      ],
-      "react",
-      "stage-0"
-    ],
-    "plugins": [
-      "transform-class-properties"
-    ]
-  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -60,41 +41,40 @@
     ]
   },
   "dependencies": {
-    "history": "^4.7.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1"
+    "history": "4.7.2",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
+    "react-router-dom": "4.3.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.2.0",
-    "eslint-loader": "^2.1.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.10.0",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.0.0",
-    "less": "^3.7.1",
-    "less-loader": "^4.1.0",
-    "lint-staged": "^7.3.0",
-    "path-to-regexp": "^2.4.0",
-    "prettier": "^1.14.3",
-    "style-loader": "^0.21.0",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.3"
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.2.2",
+    "@babel/plugin-proposal-class-properties": "7.2.3",
+    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "7.2.3",
+    "@babel/preset-react": "7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "8.0.5",
+    "clean-webpack-plugin": "1.0.0",
+    "css-loader": "2.1.0",
+    "eslint": "5.12.0",
+    "eslint-loader": "2.1.1",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-react": "7.12.3",
+    "file-loader": "3.0.1",
+    "html-webpack-plugin": "3.2.0",
+    "husky": "1.3.1",
+    "less": "3.9.0",
+    "less-loader": "4.1.0",
+    "lint-staged": "8.1.0",
+    "prettier": "1.15.3",
+    "style-loader": "0.23.1",
+    "uglifyjs-webpack-plugin": "2.1.1",
+    "webpack": "4.28.4",
+    "webpack-cli": "3.2.1",
+    "webpack-dev-server": "3.1.14",
+    "webpack-merge": "4.2.1"
   }
 }
