Take fetch configs back out of state and implement state updater for when fetchItems changes
#34
Add some more documentation
Add memoized getter for configurations

--- a/Ash.FrontEnd/package.json
+++ b/Ash.FrontEnd/package.json
@@ -44,6 +44,7 @@
     "@mdi/font": "3.3.92",
     "history": "4.7.2",
     "mdi-react": "5.2.0",
+    "memoize-one": "^5.0.0",
     "moment": "2.23.0",
     "react": "16.7.0",
     "react-dom": "16.7.0",
