--- a/Ash.FrontEnd/package.json
+++ b/Ash.FrontEnd/package.json
@@ -41,44 +41,44 @@
     ]
   },
   "dependencies": {
-    "@mdi/font": "3.3.92",
-    "history": "4.7.2",
-    "mdi-react": "5.2.0",
-    "memoize-one": "^5.0.0",
-    "moment": "2.23.0",
-    "react": "16.7.0",
-    "react-dom": "16.7.0",
-    "react-router-dom": "4.3.1"
+    "@mdi/font": "3.5.95",
+    "history": "4.9.0",
+    "mdi-react": "5.3.0",
+    "memoize-one": "5.0.2",
+    "moment": "2.24.0",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-router-dom": "5.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.2.2",
-    "@babel/plugin-proposal-class-properties": "7.2.3",
-    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
-    "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "7.2.3",
+    "@babel/cli": "7.4.3",
+    "@babel/core": "7.4.3",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.3",
+    "@babel/polyfill": "7.4.3",
+    "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
-    "clean-webpack-plugin": "1.0.0",
-    "css-loader": "2.1.0",
-    "eslint": "5.12.0",
-    "eslint-loader": "2.1.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.12.3",
+    "clean-webpack-plugin": "2.0.1",
+    "css-loader": "2.1.1",
+    "eslint": "5.16.0",
+    "eslint-loader": "2.1.2",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
     "less": "3.9.0",
     "less-loader": "4.1.0",
-    "lint-staged": "8.1.0",
-    "prettier": "1.15.3",
+    "lint-staged": "8.1.5",
+    "prettier": "1.16.4",
     "style-loader": "0.23.1",
-    "uglifyjs-webpack-plugin": "2.1.1",
-    "webpack": "4.28.4",
-    "webpack-cli": "3.2.1",
-    "webpack-dev-server": "3.1.14",
+    "uglifyjs-webpack-plugin": "2.1.2",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.3.0",
+    "webpack-dev-server": "3.2.1",
     "webpack-merge": "4.2.1"
   }
 }
