Add yarn lock to gitignore

--- a/Ash.FrontEnd/.gitignore
+++ b/Ash.FrontEnd/.gitignore
@@ -66,3 +66,6 @@ typings/
 ## Additions
 # dist dir
 dist/
+
+# yarn lock file (we're officially using npm, but yarn can be used without messing anyone up)
+yarn.lock
