--- a/Ash.FrontEnd/package.json
+++ b/Ash.FrontEnd/package.json
@@ -73,9 +73,9 @@
     "less": "3.9.0",
     "less-loader": "4.1.0",
     "lint-staged": "8.1.5",
+    "mini-css-extract-plugin": "^0.5.0",
     "prettier": "1.16.4",
     "style-loader": "0.23.1",
-    "uglifyjs-webpack-plugin": "2.1.2",
     "webpack": "4.29.6",
     "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.2.1",
