--- a/Ash.FrontEnd/package.json
+++ b/Ash.FrontEnd/package.json
@@ -76,6 +76,7 @@
     "mini-css-extract-plugin": "^0.5.0",
     "prettier": "1.16.4",
     "style-loader": "0.23.1",
+    "webapp-webpack-plugin": "^2.6.1",
     "webpack": "4.29.6",
     "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.2.1",
