--- a/Ash.FrontEnd/.eslintrc
+++ b/Ash.FrontEnd/.eslintrc
@@ -1,14 +1,18 @@
 {
   "root": true,
   "parser": "babel-eslint",
-  "plugins": ["react"],
+  "plugins": ["react", "react-hooks"],
   "env": {
     "browser": true,
     "es6": true,
     "jest": true,
     "node": true
   },
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
   "rules": {
+    "react/prop-types": 0,
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   },
   "settings": {
     "import/resolver": {
