--- a/Ash.FrontEnd/package.json
+++ b/Ash.FrontEnd/package.json
@@ -67,9 +67,10 @@
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "^1.5.0",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
-    "husky": "1.3.1",
+    "husky": "^2.1.0",
     "less": "3.9.0",
     "less-loader": "4.1.0",
     "lint-staged": "8.1.5",
