Fix some build configurations

--- a/Ash.FrontEnd/.babelrc
+++ b/Ash.FrontEnd/.babelrc
@@ -1,14 +1,16 @@
 {
   "presets": [
     [
-      "@babel/env",
+      "@babel/preset-env",
       {
+        "useBuiltIns": "entry",
+        "corejs": 3,
         "targets": {
           "browsers": ["last 2 versions", "not dead"]
         }
       }
     ],
-    "@babel/react"
+    "@babel/preset-react"
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
