--- a/Ash.FrontEnd/.eslintrc
+++ b/Ash.FrontEnd/.eslintrc
@@ -10,6 +10,7 @@
   },
   "extends": ["eslint:recommended", "plugin:react/recommended"],
   "rules": {
+    "no-unused-vars": 1,
     "react/prop-types": 0,
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
