--- a/Ash.FrontEnd/package.json
+++ b/Ash.FrontEnd/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@mdi/font": "3.5.95",
+    "core-js": "^3.1.4",
     "history": "4.9.0",
     "mdi-react": "5.3.0",
     "memoize-one": "5.0.2",
@@ -55,7 +56,6 @@
     "@babel/core": "7.4.3",
     "@babel/plugin-proposal-class-properties": "7.4.0",
     "@babel/plugin-proposal-object-rest-spread": "7.4.3",
-    "@babel/polyfill": "7.4.3",
     "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
     "babel-eslint": "10.0.1",
