Change useFido so it supports multiple config objects (like the original Fido component)
#34
Includes a cleanup effect to synchronize state with the config (new items are initialized and old items are deleted)

--- a/Ash.FrontEnd/.eslintrc
+++ b/Ash.FrontEnd/.eslintrc
@@ -11,6 +11,7 @@
   "extends": ["eslint:recommended", "plugin:react/recommended"],
   "rules": {
     "no-unused-vars": 1,
+    "no-console": 1,
     "react/prop-types": 0,
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
