Update project dependencies
Go back to using Favicons Webpack Plugin since the Webapp Webpack Plugin has been merged back into it (finally...)
Use font awesome icons instead of material design icons
Fix an eslint error (it's actually a false-positive, but this solution will work until that's fixed)

--- a/Ash.FrontEnd/package.json
+++ b/Ash.FrontEnd/package.json
@@ -41,46 +41,46 @@
     ]
   },
   "dependencies": {
-    "@mdi/font": "3.5.95",
-    "core-js": "^3.1.4",
-    "history": "4.9.0",
-    "mdi-react": "5.3.0",
-    "memoize-one": "5.0.2",
-    "moment": "2.24.0",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-router-dom": "5.0.0"
+    "@fortawesome/fontawesome-svg-core": "^1.2.24",
+    "@fortawesome/free-solid-svg-icons": "^5.11.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "core-js": "^3.2.1",
+    "history": "^4.10.1",
+    "memoize-one": "^5.1.1",
+    "moment": "^2.24.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "7.4.3",
-    "@babel/core": "7.4.3",
-    "@babel/plugin-proposal-class-properties": "7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.4.3",
-    "@babel/preset-env": "7.4.3",
-    "@babel/preset-react": "7.0.0",
-    "babel-eslint": "10.0.1",
-    "babel-loader": "8.0.5",
-    "clean-webpack-plugin": "2.0.1",
-    "css-loader": "2.1.1",
-    "eslint": "5.16.0",
-    "eslint-loader": "2.1.2",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-react-hooks": "^1.5.0",
-    "file-loader": "3.0.1",
-    "html-webpack-plugin": "3.2.0",
-    "husky": "^2.1.0",
-    "less": "3.9.0",
-    "less-loader": "4.1.0",
-    "lint-staged": "8.1.5",
-    "mini-css-extract-plugin": "^0.5.0",
-    "prettier": "1.16.4",
-    "style-loader": "0.23.1",
-    "webapp-webpack-plugin": "^2.6.1",
-    "webpack": "4.29.6",
-    "webpack-cli": "3.3.0",
-    "webpack-dev-server": "3.2.1",
-    "webpack-merge": "4.2.1"
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.4.0",
+    "eslint-loader": "^3.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
+    "favicons-webpack-plugin": "^1.0.2",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.0.5",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "lint-staged": "^9.2.5",
+    "mini-css-extract-plugin": "^0.8.0",
+    "prettier": "^1.18.2",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1"
   }
 }
