--- a/src/Ash.FrontEnd/package.json
+++ b/src/Ash.FrontEnd/package.json
@@ -11,7 +11,7 @@
   ],
   "main": "index.jsx",
   "scripts": {
-    "watch": "webpack-dev-server --color --progress",
+    "watch": "webpack-dev-server --color --progress --host 0.0.0.0",
     "build": "webpack -p",
     "build-dev": "webpack --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
