--- a/src/Ash.BackEnd/composer.json
+++ b/src/Ash.BackEnd/composer.json
@@ -7,16 +7,17 @@
     "require": {
         "php": "^7.4",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0"
+        "fruitcake/laravel-cors": "^1.0",
+        "laravel/framework": "^7.0",
+        "laravel/tinker": "^2.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "classmap": [
