Put node and php dependencies in volumes and comment out the user stuff for now

--- a/Ash.FrontEnd/.gitignore
+++ b/Ash.FrontEnd/.gitignore
@@ -64,6 +64,8 @@ typings/
 .next
 
 ## Additions
+# dist dir
+dist/
 
 # yarn lock file (we're officially using npm, but yarn can be used without messing anyone up)
 yarn.lock
