--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -8,29 +8,21 @@ RUN apk update && apk add --no-cache \
     git
 
 # Set working directory
-ENV PROJECT_DIR /home/node
+ENV PROJECT_DIR /home/node/project
 WORKDIR ${PROJECT_DIR}
 
 # Set up node variables
 ENV NODE_ENV development
-# ENV NODE_PATH ${PROJECT_DIR}/client/node_modules/.bin
 
-# Copy source directories
-COPY --chown=node:node . ${WORKDIR}/client
-# COPY --chown=node:node ../githooks ${WORKDIR}/githooks
-# COPY --chown=node:node ../.git ${WORKDIR}/.git
+# Copy entire codebase
+# necessary so that we can use lint-staged properly during development
+COPY --chown=node:node . ${WORKDIR}
 
 # Create node_module mount point
 RUN mkdir -p ${PROJECT_DIR}/client/node_modules \
   && chown node:node -R ${PROJECT_DIR}/client/node_modules \
   && chmod 777 -R ${PROJECT_DIR}/client/node_modules
 VOLUME [ "${PROJECT_DIR}/client/node_modules" ]
-
-# Create built files mount point
-RUN mkdir -p ${PROJECT_DIR}/client/dist \
-  && chown node:node -R ${PROJECT_DIR}/client/dist \
-  && chmod 777 -R ${PROJECT_DIR}/client/dist
-VOLUME [ "${PROJECT_DIR}/client/dist" ]
 
 # Change current user to node (recommended)
 USER node
