--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,14 @@
   ],
   "main": "index.jsx",
   "scripts": {
+    "start": "npm run watch",
     "watch": "webpack-dev-server --color --progress --host 0.0.0.0",
     "build": "webpack -p",
     "build-dev": "webpack --progress",
     "test": "echo \"Error: no test specified\" && exit 1",
     "precommit": "lint-staged",
-    "add-hooks": "shx cp -r ../githooks/* ../../.git/hooks/",
-    "add-hooks-docker": "shx cp -r ../githooks/* ../.git/hooks/"
+    "postinstall": "npm run add-hooks",
+    "add-hooks": "shx cp -r ../githooks/* ../.git/hooks/"
   },
   "repository": {
     "type": "git",
@@ -30,12 +31,10 @@
   "lint-staged": {
     "*.{js,jsx}": [
       "prettier --write",
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ],
     "*.{json,css,less,md}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "dependencies": {
@@ -72,7 +71,7 @@
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
-    "lint-staged": "^9.2.5",
+    "lint-staged": "^10.1.5",
     "mini-css-extract-plugin": "^0.8.0",
     "prettier": "^1.18.2",
     "shx": "^0.3.2",
