--- a/docker-compose.prod.yml.example
+++ b/docker-compose.prod.yml.example
@@ -14,7 +14,9 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - "8080:80"
+      - "80:80"
+      # TODO Implement SSL
+      - "443:443"
     volumes:
       - ./server:/var/www/server
       - ./server/vendor:/var/www/server/vendor
@@ -27,8 +29,6 @@ services:
     container_name: mariadb
     restart: unless-stopped
     tty: true
-    ports:
-      - "3306:3306"
     volumes:
       - db-data:/var/lib/mysql
     environment:
@@ -36,20 +36,6 @@ services:
       MYSQL_DATABASE: ashkeepersrestwebsite
       MYSQL_USER: web
       MYSQL_PASSWORD: secret
-    networks:
-      - ashkeepers-rest
-  dbadmin:
-    image: phpmyadmin/phpmyadmin:latest
-    container_name: dbadmin
-    restart: unless-stopped
-    tty: true
-    ports:
-      - "8081:80"
-    environment:
-      PMA_HOST: mariadb
-      PMA_PORT: 3306
-      PMA_USER: root
-      PMA_PASSWORD: SuperSecretP4ssw0rd!
     networks:
       - ashkeepers-rest
   api:
@@ -61,25 +47,15 @@ services:
       - ./server:/var/www/server
       - ./server/vendor:/var/www/server/vendor
       - ./server/php/dev.ini:/usr/local/etc/php/conf.d/local.ini
-    ports:
-      - "9000:9000"
     networks:
       - ashkeepers-rest
   client:
     build:
-      context: ./
-      dockerfile: ./client/Dockerfile.dev
-      # Use the production dockerfile if you are only working on the api server
-      #context: ./client
-      #dockerfile: Dockerfile
+      context: ./client
+      dockerfile: Dockerfile
     container_name: client
     tty: true
     volumes:
-      - ./client/node_modules:/home/node/project/client/node_modules
-      # Development mode needs access to the entire project instead of just the client files so that lint-staged works properly
-      - ./:/home/node/project
-    ports:
-      # Exposes webpack dev server to the host
-      - "8000:8000"
+      - ./client/dist:/home/node/project/dist
     networks:
       - ashkeepers-rest
