--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -1,6 +1,6 @@
 # Thers a stupid bug in nginx that's been around for years that makes it so we can't easily put both front and backend
 # on the same server. So we'll just do a proxy pass...
-upstream localhost.api {
+upstream laravel.ashkeeper.tech {
     server 127.0.0.1;
 }
 
@@ -13,7 +13,7 @@ server {
     root /var/www/client/dist;
 
     location /api {
-        proxy_pass http://localhost.api/;
+        proxy_pass http://laravel.ashkeeper.tech/;
     }
 
     location / {
@@ -24,7 +24,7 @@ server {
 server {
     listen 80;
     index  index.php index.html;
-    server_name localhost.api;
+    server_name laravel.ashkeeper.tech;
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/server/public;
